chore: sync project structure changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Привет, мир</title>
+    <title>Vlprime</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/uh-body-normal-content.css" />
     <link rel="stylesheet" href="css/style.css" />
