Move service images into assets directory

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <article class="service-card__content">
               <img
                 class="service-card__image"
-                src="resorses/1.webp"
+                src="assets/img/1.webp"
                 width="360"
                 height="220"
                 loading="lazy"
@@ -238,7 +238,7 @@
             <article class="service-card__content">
               <img
                 class="service-card__image"
-                src="resorses/2.webp"
+                src="assets/img/2.webp"
                 width="360"
                 height="220"
                 loading="lazy"
@@ -257,7 +257,7 @@
             <article class="service-card__content">
               <img
                 class="service-card__image"
-                src="resorses/3.webp"
+                src="assets/img/3.webp"
                 width="360"
                 height="220"
                 loading="lazy"
@@ -285,7 +285,7 @@
             <article class="service-card__content">
               <img
                 class="service-card__image"
-                src="resorses/1.webp"
+                src="assets/img/1.webp"
                 width="360"
                 height="220"
                 loading="lazy"
